tests/type-errors/bad_fields_type_record.arl
archetype bad_fields_type_record

record my_record {
  id: chain_id;
}

entry exec () {
  effect {
    ()
  }
}
